# algopy

./: .gitignore  .travis.yml  AD.py~  ADOLC-Operations_1.tap  CHANGELOG.rst  MANIFEST.in  PITFALLS_ISSUES_KNOWN_BUGS.rst  README  README.rst  SConstruct.EXAMPLE  __init__.py  algopy.py  computational_graph.dot  create_graph.py~  cython_vector_forward_mode.pyx  forward_mode.py  forward_mode.py~  interpolation_generator.py  interpolation_generator.py~  matrix_ad.py  matrix_reverse.py  pyproject.toml  requirements.txt  reverse_mode.py  reverse_mode.py~  run_tests.py  sandbox.py  scalar_reverse.py  setup.cfg  setup.py  steepest_descent_on_rosenbrock_function.eps  sympy_mailing_list.py~  test.txt  test_experimental.py  vector_forward_mode.py  vector_forward_mode.py~  wolfe_nonsmooth.py  wolfe_nonsmooth.py~
algopy/: .gitignore  README.rst  __init__.py  _npversion.py  base_type.py  compound.py  dumbderiv.py  exact_interpolation.py  globalfuncs.py  special.py  tracer.py  utils.py
deprecated/: numpy_array_dtype_interface.py  reverse_mode.py  vector_forward_mode.py
documentation/: differentiation_of_the_symmetric_eigenvalue_decomposition.py  getting_started.py
examples/: differentiate_explicit_euler_with_pyadolc.py  differentiating_qr_decomposition.py  gradient_of_optimal_experimental_design_objective_function.py  newtons_method.py  prettyplotting.py  q-robust-OED.py  q-robust_optimal_experimental_design.py  q_robust_OED.py  sparse_test.py
experimental/: README.rst  algopy.py  c_implementations.py  exact_interpolation.py  flow_graph.py  pullback_alternative.py  (+4 more)
(+253 files in other folders)
